--- a/frontend/style.css
+++ b/frontend/style.css
@@ -316,7 +316,7 @@ body{
   
   .close:hover,
   .close:focus {
-    color: #681010;
+    color: #0b0808;
     text-decoration: none;
     cursor: pointer;
   }
@@ -360,7 +360,7 @@ body{
   
   .close1:hover,
   .close1:focus {
-    color: #681010;
+    color: #0b0808;
     text-decoration: none;
     cursor: pointer;
   }
@@ -394,6 +394,8 @@ body{
   table {
     border-collapse: collapse;
     width: 100%;
+    position: relative;
+    z-index: 0;
     
   }
   th, td {
@@ -404,11 +406,23 @@ body{
     
   }
   th {
-    background-color: #5e1212;
+    background-color: #423d3d;
     color: white;
     position: sticky;
     top: 0;
-
+    z-index: 2;
+  }
+  table th button {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+    z-index: 2;
+    float: right;
   }
   
   tr:nth-child(even) {
@@ -420,19 +434,41 @@ body{
     background-color: #ddd;
     font-size: medium;
   }
-table th button {
-  background-color: #f44336;
-  color: white;
-  border: none;
-  padding: 5px 10px;
-  font-size: 14px;
-  cursor: pointer;
-  display: block;
-  margin: 0 auto;
-  position: sticky;
-}
+
 
 table th button:hover {
-  background-color: #d32f2f;
-  
+  background-color: #ca200a;
+
 }
+
+.show-names-button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 10px;
+  right: auto;
+}
+
+.ascending-button, .descending-button {
+  background-color: #3498db;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 10px;
+  transition: background-color 0.3s ease;
+
+}
+
+.ascending-button:hover, .descending-button:hover {
+  background-color: #2980b9;
+}
+
+/* #buttonContainer {
+  display: flex;
+  justify-content: flex-end;
+} */
